mus: Fix gpu context lost errors and crashes on display removal

Bug: 798538
Change-Id: I064416cfc377bf19ec9afa214baa28a75846acf8