ash/system/night_light/night_light_controller.cc
@@ -119,10 +119,9 @@ void ApplyTemperatureToCompositors(float temperature) {
     matrix.set(2, 2, blue_scale);
   }
 
-  for (auto* root_window_controller :
-       RootWindowController::root_window_controllers()) {
-    root_window_controller->GetHost()->compositor()->SetDisplayColorMatrix(
-        matrix);
+  for (auto* controller : RootWindowController::root_window_controllers()) {
+    if (controller->GetHost()->compositor())
+      controller->GetHost()->compositor()->SetDisplayColorMatrix(matrix);
   }
 }
 
